classDiagram
    direction LR

    class RealmBuilder {
        realm: IRealm
        kcApi: IKcApi
        router: Router

        build(): Promise<void>
        _initRealm(): Promise<InitRealmResponse>
        _initApp(initAppPayload: InitAppPayload): Promise<InitAppResponse>
        _initClient(initClientPayload: InitClientPayload): Promise<InitClientResponse>
        _initGroup(initGroupPayload: InitGroupPayload): Promise<InitGroupResponse>

        _initRole(role: IRole, publicClientUuid: string, parentRoleId?: string): Promise<void>

        _removeUsernameValidator(): Promise<void>
        _createAttribute(attributeName: string): ProfileAttribute
        _initUserSchema(userProfileAttributes: string[]): Promise<void>
        _initRegisterRoute(client: IClient): Promise<void>
}



RealmBuilder --> Realm : realm
RealmBuilder --> KcApi : kcApi
